stockage des different ellement dans le dom

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./public/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+    <h1 class="bg-info border-left border-primary mx-5 my-3 py-3 text-light px-4">TodoList</h1>
+    </div>
+    <div class="mx-5 my-3 py-3 bg-white container border border-info">
+        <h1>Ajouter une tâche :</h1>
+        <input type="text" class="w-25 mr-5 mb-3">
+        <button class="btn btn-info mb-3">Ajouter</button>
+        <div id="laListe"></div>
+    </div>
+
+
+
+
+    <script src="./main.js"></script>
 </body>
 </html>
